# coherence

./: Cargo.toml  README.md
tests/src/: common.ts  hello_world.ts  who_am_i.ts
workdir/dna/: coherence.dna  dna.yaml
zomes/coherence/: Cargo.toml
